--- a/src/pages/login/index.css
+++ b/src/pages/login/index.css
@@ -2,8 +2,22 @@
   position: relative;
 }
 
-.lu-login-bg-img {
+.lu-login-cover {
+  background: #070707;
+  opacity: 0.5;
   width: 100%;
+  min-height: 100vh;
+  position: absolute;
+  z-index: 2;
+}
+
+.lu-login-bg-img {
+  background-image: url('../../assets/img/bg.jpg');
+  background-size: cover;
+  position: absolute;
+  width: 100%;
+  min-height: 100vh;
+  z-index: 1;
 }
 
 .lu-login-logo {
@@ -13,6 +27,7 @@
 }
 
 .lu-login-cont {
+  z-index: 3;
   background: #fff;
   width: 400px;
   height: 460px;
@@ -35,7 +50,9 @@
 
 .lu-login-btn {
   width: 300px;
-  height: 38px;
+  height: 40px;
   border-radius: 6px;
   margin-top: 16px;
+  background: #1d953f;
+  border: #1d953f;
 }
